syntax = "proto3";

package hashmess;

// ---- Auth Service ---- //

service AuthService {
    rpc Authenticate(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
    string code = 1;
}

message AuthResponse {
    string token = 1;
    string username = 2;
}

// ---- Comments Service ---- //

service CommentsService {
    rpc GetComments(CommentsRequest) returns (Comments) {}
}

message Comment {
    string user = 1;
    string message = 2;
}

message CommentsRequest {
    string hash = 1;
}

message Comments {
    repeated Comment comments = 1;
}